# normandy

./: .gitignore  Cargo.toml  flake.nix
src/: args.rs  config.rs  logger.rs  main.rs  worker.rs
