[package]
name = "normandy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A simple CLI tool for load-testing webservers."
repository = "https://github.com/JacoMalan1/normandy"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
http = "1.2.0"
reqwest = "0.12.9"
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
  "net",
  "fs",
  "macros",
  "rt-multi-thread",
] }
